--- a/index.html
+++ b/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!-- Import Roboto Font -->
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<html>
+		<head>
+			<!--Import Google Icon Font-->
+			<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+			<!-- Import Roboto Font -->
+			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+			<!--Import materialize.css-->
+			<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+			<!-- Custom Stylesheet -->
+			<link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Revamp 2K16</title>
-    </head>
+			<!--Let browser know website is optimized for mobile-->
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<title>Revamp 2K16</title>
+		</head>
 
-    <body>
+		<body>
+		<!-- Navbar -->
+		<nav>
+		  <div class="nav-wrapper">
+		    <a href="#!" class="brand-logo">Revamp Logo</a>
+		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+		    <ul class="right hide-on-med-and-down">
+		    	<li class="active"><a href="#">Home</a></li>
+		    	<li><a href="#">Events</a></li>
+		    	<li><a href="#">Register</a></li>
+		    	<li><a href="#">Terms &amp; Conditions</a></li>
+		    	<li><a href="#">Contact</a></li>
+		    </ul>
+		    <ul class="side-nav" id="mobile-demo">
+		    	<li class="active"><a href="#">Home</a></li>
+		    	<li><a href="#">Events</a></li>
+		    	<li><a href="#">Register</a></li>
+		    	<li><a href="#">Terms &amp; Conditions</a></li>
+		    	<li><a href="#">Contact</a></li>
+		    </ul>
+		  </div>
+		</nav>
 
-    <h1>Welcome to revamp</h1>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
-  </html>
+
+
+
+
+
+
+			<!--Import jQuery before materialize.js-->
+			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+			<script type="text/javascript" src="js/materialize.min.js"></script>
+			<script type="text/javascript" src="js/custom.js"></script>
+
+		</body>
+	</html>
