--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<!--Import Google Icon Font-->
-			<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 			<!-- Import Roboto Font -->
 			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 			<!--Import materialize.css-->
