added countdown using flipclock

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 			<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 			<!-- Custom Stylesheet -->
 			<link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
+			<link rel="stylesheet" href="flipclock.css">
+
 
 			<!--Let browser know website is optimized for mobile-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -38,6 +40,24 @@
 		  </div>
 		</nav>
 
+		<div class="container">
+			<div class="row">
+				<div class="valign-wrapper">
+					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo">
+				</div>
+			</div>
+
+			
+		</div>
+
+		<div class="row">
+				<div class="col m6 offset-m3">
+					<div class="clock"></div>
+				</div>
+			</div>
+
+
+		
 
 
 
@@ -48,6 +68,6 @@
 			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 			<script type="text/javascript" src="js/materialize.min.js"></script>
 			<script type="text/javascript" src="js/custom.js"></script>
-
+			<script src="flipclock.min.js"></script>
 		</body>
 	</html>
