Changed countdown component

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 			<!-- Custom Stylesheet -->
 			<link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
-			<link rel="stylesheet" href="flipclock.css">
+			<link rel="stylesheet" href="css/clock.css">
 
 
 			<!--Let browser know website is optimized for mobile-->
@@ -46,15 +46,17 @@
 					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo">
 				</div>
 			</div>
-
-			
 		</div>
 
-		<div class="row">
-				<div class="col m6 offset-m3">
-					<div class="clock"></div>
-				</div>
-			</div>
+		<div class="container">
+
+			<center>	
+				<h2>Starting in</h2>
+				<div id="myCounter"></div>
+			</center>
+		</div>
+
+
 
 
 		
@@ -68,6 +70,6 @@
 			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 			<script type="text/javascript" src="js/materialize.min.js"></script>
 			<script type="text/javascript" src="js/custom.js"></script>
-			<script src="flipclock.min.js"></script>
+			<script src="js/clock.js"></script>
 		</body>
 	</html>
