Dhaansu background and started events page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		</head>
 
 		<body>
+		<!-- Loading -->
+		<div class="progress">
+		    <div class="indeterminate"></div>
+		</div>
 		<!-- Navbar -->
 		<nav>
 		  <div class="nav-wrapper">
@@ -25,14 +29,14 @@
 		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 		    	<li class="active"><a href="#">Home</a></li>
-		    	<li><a href="#">Events</a></li>
+		    	<li><a href="events.html">Events</a></li>
 		    	<li><a href="#">Register</a></li>
 		    	<li><a href="#">Terms &amp; Conditions</a></li>
 		    	<li><a href="#">Contact</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
 		    	<li class="active"><a href="#">Home</a></li>
-		    	<li><a href="#">Events</a></li>
+		    	<li><a href="events.html">Events</a></li>
 		    	<li><a href="#">Register</a></li>
 		    	<li><a href="#">Terms &amp; Conditions</a></li>
 		    	<li><a href="#">Contact</a></li>
