fixed navbar and added a sample modal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<title>Revamp 2K16</title>
 		</head>
 
-		<body>
+		<body class="cool">
 		<!-- Loading -->
 		<div class="progress">
 		    <div class="indeterminate"></div>
