new logo and footer

--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
 
 			<!--Let browser know website is optimized for mobile-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Events | Revamp 2K16</title>
+			<title>Events | Revamp 2K17</title>
 		</head>
 
 		<body>
@@ -23,7 +23,7 @@
 		<!-- Navbar -->
 		<nav>
 		  <div class="nav-wrapper">
-		    <a href="index.html" class="brand-logo">Revamp Logo</a>
+		    <a href="index.html" class="brand-logo"><img src="images/header.png" alt="Revamp Logo" class="responsive-img rlogo"></a>
 		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 		    	<li><a href="index.html">Home</a></li>
@@ -282,6 +282,16 @@
             </ul>
 		   </div>
 		 </div>
+
+		 <footer class="page-footer footer">
+		     <div class="footer-copyright">
+		       <div class="container">
+		       <div class="row flow-text" style="text-align: center;">
+		       	 Made by <a class="brown-text text-lighten-3" href="http://anujsh.com" target="_blank">Anuj Sharma</a>
+		       	</div>
+		       </div>
+		     </div>
+		   </footer>
 
 	
 		<!-- Content Ends Here -->
