--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<!--Let browser know website is optimized for mobile-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Revamp 2K16</title>
+			<title>Revamp 2K17</title>
 		</head>
 
 		<body class="cool">
@@ -25,7 +25,7 @@
 		<!-- Navbar -->
 		<nav>
 		  <div class="nav-wrapper">
-		    <a href="#!" class="brand-logo">Revamp Logo</a>
+		    <a href="#!" class="brand-logo"><img src="images/header.png" alt="Revamp Logo" class="responsive-img rlogo"></a>
 		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 		    	<li class="active"><a href="#">Home</a></li>
@@ -63,12 +63,15 @@
 
 
 
-		
-
-
-
-
-
+		<footer class="page-footer footer">
+		    <div class="footer-copyright">
+		      <div class="container">
+		      <div class="row flow-text" style="text-align: center;">
+		      	 Made by <a class="brown-text text-lighten-3" href="http://anujsh.com" target="_blank">Anuj Sharma</a>
+		      	</div>
+		      </div>
+		    </div>
+		  </footer>
 
 			<!--Import jQuery before materialize.js-->
 			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
