--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<title>Revamp 2K17</title>
 		</head>
 
-		<body class="cool">
+		<body>
 		<!-- Loading -->
 		<div class="progress">
 		    <div class="indeterminate"></div>
@@ -43,11 +43,15 @@
 		    </ul>
 		  </div>
 		</nav>
+		<video playsinline autoplay muted loop poster="images/background.png" id="bgvid">
+		    <source src="images/background.webm" type="video/webm">
+		    <source src="images/background.mp4" type="video/mp4">
+		</video>
 
 		<div class="container">
 			<div class="row">
 				<div class="valign-wrapper">
-					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo">
+					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo zoomIn">
 				</div>
 			</div>
 		</div>
