--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<title>Revamp 2K17</title>
 		</head>
 
-		<body>
+		<body class="cool">
 		<!-- Loading -->
 		<div class="progress">
 		    <div class="indeterminate"></div>
@@ -43,7 +43,7 @@
 		    </ul>
 		  </div>
 		</nav>
-		<video playsinline autoplay muted loop poster="images/background.png" id="bgvid">
+		<video playsinline autoplay muted loop id="bgvid">
 		    <source src="images/background.webm" type="video/webm">
 		    <source src="images/background.mp4" type="video/mp4">
 		</video>
