--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		    </ul>
 		  </div>
 		</nav>
-		<video playsinline autoplay muted loop id="bgvid">
+		<video playsinline autoplay muted loop id="bgvid" class="hide-on-med-and-down">
 		    <source src="images/background.webm" type="video/webm">
 		    <source src="images/background.mp4" type="video/mp4">
 		</video>
