--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="valign-wrapper">
-					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo zoomIn">
+					<img src="images/logo.png" alt="Revamp Logo" class="responsive-img revamp-logo zoomIn rotateIn">
 				</div>
 			</div>
 		</div>
