--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
 		    <a href="#!" class="brand-logo"><img src="images/header.png" alt="Revamp Logo" class="responsive-img rlogo"></a>
 		    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
-		    	<li class="active"><a href="#">Home</a></li>
+		    	<li  class="active"><a href="#">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="#">Register</a></li>
-		    	<li><a href="#">Terms &amp; Conditions</a></li>
-		    	<li><a href="#">Contact</a></li>
-		    </ul>
+		    	<li><a href="reg.html">Register</a></li>
+		    	<li><a href="rules.html">Rules</a></li>
+		    	<li><a href="team.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
+		       </ul>
 		    <ul class="side-nav" id="mobile-demo">
-		    	<li class="active"><a href="#">Home</a></li>
+		    <li class="active"><a href="#">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="#">Register</a></li>
-		    	<li><a href="#">Terms &amp; Conditions</a></li>
-		    	<li><a href="#">Contact</a></li>
+		    	<li><a href="reg.html">Register</a></li>
+		    	<li><a href="rules.html">Rules</a></li>
+		    	<li><a href="team.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 		    </ul>
 		  </div>
 		</nav>
@@ -94,7 +96,7 @@
 		      <div class="container">
 		      <div class="row flow-text">
 		      	<div class="left-align" style="display: inline-block;">Like us on
-				<a href="https://facebook.com/revamp" target="_blank">Facebook</a>
+				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook</a>
 				</div>
 		      	 <div style="display: inline-block; float: right;">
 				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a>
