--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
 
 			<!--Let browser know website is optimized for mobile-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Events | Revamp 2K17</title>
+			<title>Rules | Revamp 2K17</title>
 		</head>
 
 		<body>
