--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4" >Tamaasha - Nukkad Natak	<i class="material-icons right">close</i></span>
-		   				     <p> Stage set for <br>
+		   				     <p> <b>INTRO: </b> Stage set for <br>
 		   				     social-activism to directly confront   <br>
 		   				     the public.</p>
 
@@ -94,7 +94,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Banjo - Clash of Bands<i class="material-icons right">close</i></span>
-		   				     <p> An emmence war <br/>between the best bands<br/> of our college</p>
+		   				     <p> <b>INTRO: </b> An emmence war <br/>between the best bands<br/> of our college</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -112,7 +112,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Games<i class="material-icons right">close</i></span>
-		   				     <p> Mind refreshing small <br/>games can be your cup<br/> of tea for the day.</p>
+		   				     <p> <b>INTRO: </b> Mind refreshing small <br/>games can be your cup<br/> of tea for the day.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -130,7 +130,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Natraj - Solo Dance Competition<i class="material-icons right">close</i></span>
-		   				     <p> Showcase your grooves and if you stumble make it part <br/>of the dance.</p>
+		   				     <p> <b>INTRO: </b> Showcase your grooves and if you stumble make it part <br/>of the dance.</p>
 							 <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -152,7 +152,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Nritya - Group Dance<i class="material-icons right">close</i></span>
-		   				     <p> Turn up the volume <br/> and dance, to see <br/> the best version of you.</p>
+		   				     <p> <b>INTRO: </b> Turn up the volume <br/> and dance, to see <br/> the best version of you.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -170,7 +170,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Cine Quiz<i class="material-icons right">close</i></span>
-		   				     <p> Question your knowledge <br> about the film industry. HERE!
+		   				     <p> <b>INTRO: </b> Question your knowledge <br> about the film industry. HERE!
 		   				     </p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -189,7 +189,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Raag - Singing Competition<i class="material-icons right">close</i></span>
-		   				     <p> Come and emancipate <br/>yourself to the world<br/> of music because story of the life is  <br>
+		   				     <p> <b>INTRO: </b> Come and emancipate <br/>yourself to the world<br/> of music because story of the life is  <br>
 		   				     quicker than the wink of an eye</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -208,7 +208,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Sa-Re-Ga-Ma-Pa Antakshari<i class="material-icons right">close</i></span>
-		   				     <p> Bring up the old memories<br/> in the new you.<br/> The everlasting game.</p>
+		   				     <p> <b>INTRO: </b> Bring up the old memories<br/> in the new you.<br/> The everlasting game.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -230,7 +230,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Mirage - Fashion Show<i class="material-icons right">close</i></span>
-		   				     <p> Everyday is a fashion show<br/> and the world is <br/>the runway.</p>
+		   				     <p> <b>INTRO: </b> Everyday is a fashion show<br/> and the world is <br/>the runway.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -249,7 +249,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Drishyam - Mobile Movie making<i class="material-icons right">close</i></span>
-		   				     <p> Life is not living it.<br/> It's making .<br/> Make something good of it.
+		   				     <p> <b>INTRO: </b> Life is not living it.<br/> It's making .<br/> Make something good of it.
 		   				     </p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -268,7 +268,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Manch Tantra - Skit Competiton<i class="material-icons right">close</i></span>
-		   				    <p> All the world is your<br/> manchhh so use your<br/> tantra to showcase what u've got.</p>
+		   				    <p> <b>INTRO: </b> All the world is your<br/> manchhh so use your<br/> tantra to showcase what u've got.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 		   				   </div>
@@ -285,7 +285,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Gudgudi - The Comic Act<i class="material-icons right">close</i></span>
-		   				     <p> Make the world <br/> laugh with your words.</p>
+		   				     <p> <b>INTRO: </b> Make the world <br/> laugh with your words.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -306,7 +306,7 @@
 		   			   </div>
 		   			   <div class="card-reveal">
 		   			     <span class="card-title grey-text text-darken-4">Hasya Kavi<i class="material-icons right">close</i></span>
-		   			     <p> Find and show us <br/> the comic in ur poetry.</p>
+		   			     <p> <b>INTRO: </b> Find and show us <br/> the comic in ur poetry.</p>
 		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -351,7 +351,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Rag To Rich<i class="material-icons right">close</i></span>
-		   				     <p>Useful Model has to be created with the unused/ garbage components provided.</p>
+		   				     <p> <b>INTRO: </b>Useful Model has to be created with the unused/ garbage components provided.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -369,7 +369,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Biding C Quiz<i class="material-icons right">close</i></span>
-		   				     <p>It is a 1 day programming event. <br>
+		   				     <p> <b>INTRO: </b>It is a 1 day programming event. <br>
 		   				     C programming quiz.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -388,7 +388,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">LAN Games<i class="material-icons right">close</i></span>
-		   				     <p>There will be 3 games. It is a single day event.</p>
+		   				     <p> <b>INTRO: </b>There will be 3 games. It is a single day event.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -410,7 +410,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Hack Fest<i class="material-icons right">close</i></span>
-		   				     <p>Will be held in computer labs. <br>
+		   				     <p> <b>INTRO: </b>Will be held in computer labs. <br>
 		   				     Networking with programming.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
@@ -430,7 +430,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Robo Race<i class="material-icons right">close</i></span>
-		   				     <p>Near AB-3</p>
+		   				     <p> <b>INTRO: </b>Near AB-3</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -448,7 +448,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Circuit Designing<i class="material-icons right">close</i></span>
-		   				     <p>1 day event. <br> In Electrical labs. <br>
+		   				     <p> <b>INTRO: </b>1 day event. <br> In Electrical labs. <br>
 		   				     Teams from outside KEC will also be invited.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -467,7 +467,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Code Debugging<i class="material-icons right">close</i></span>
-		   				     <p>Debug code errors in C, Java, C#</p>
+		   				     <p> <b>INTRO: </b>Debug code errors in C, Java, C#</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -489,7 +489,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Web Developer<i class="material-icons right">close</i></span>
-		   				     <p>Will be held in computer labs.</p>
+		   				     <p> <b>INTRO: </b>Will be held in computer labs.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -508,7 +508,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Bear Your Load<i class="material-icons right">close</i></span>
-		   				     <p>Participant has to balance the load of components.</p>
+		   				     <p> <b>INTRO: </b>Participant has to balance the load of components.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -526,7 +526,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Auto CAD<i class="material-icons right">close</i></span>
-		   				     <p>In CAD Lab.</p>
+		   				     <p> <b>INTRO: </b>In CAD Lab.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -544,7 +544,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Build a bridge<i class="material-icons right">close</i></span>
-		   				     <p>In civil Lab</p>
+		   				     <p> <b>INTRO: </b>In civil Lab</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -563,7 +563,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Idea Presentation<i class="material-icons right">close</i></span>
-		   				     <p>Present Your Idea</p>
+		   				     <p> <b>INTRO: </b>Present Your Idea</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -581,11 +581,15 @@
 		    <div class="footer-copyright">
 		      <div class="container">
 		      <div class="row flow-text">
-		      	<div class="left-align" style="display: inline-block;">Like us on
-				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook</a>
+		      	<div class="left-align" style="display: inline-block; font-size:14px;">Like us on
+				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook @Revamp2k17</a>
 				</div>
-		      	 <div style="display: inline-block; float: right;">
-				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a>
+				<div class="center" style="display: inline-block; font-size:14px;">&nbsp 2017
+				<a href="https://facebook.com/krishnacollege" target="_blank">Krishna Engineering College</a>
+				</div>
+		      	
+		      	 <div style="display: inline-block; float: right; font-size:16px;">
+				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a> &amp <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
 		      	 </div>
 		      	</div>
 		      </div>
