Rules Page & Footer & Contact Page & Team Page

--- a/index.html
+++ b/index.html
@@ -91,21 +91,24 @@
 
 
 
-		<footer class="page-footer footer">
+	 <footer class="page-footer footer">
 		    <div class="footer-copyright">
 		      <div class="container">
 		      <div class="row flow-text">
-		      	<div class="left-align" style="display: inline-block;">Like us on
-				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook</a>
+		      	<div class="left-align" style="display: inline-block; font-size:14px;">Like us on
+				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook @Revamp2k17</a>
 				</div>
-		      	 <div style="display: inline-block; float: right;">
-				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a>
+				<div class="center" style="display: inline-block; font-size:14px;">&nbsp 2017
+				<a href="https://facebook.com/krishnacollege" target="_blank">Krishna Engineering College</a>
+				</div>
+		      	
+		      	 <div style="display: inline-block; float: right; font-size:16px;">
+				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a> &amp <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
 		      	 </div>
 		      	</div>
 		      </div>
 		    </div>
 		  </footer>
-
 			<!--Import jQuery before materialize.js-->
 			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 			<script type="text/javascript" src="js/materialize.min.js"></script>
