--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</ul>
 			</div>
 			<div class="col m3 hide-on-small-only">
-				<a class="waves-effect waves-light btn-large" href="register.html">Register</a>
+				<a class="waves-effect waves-light btn-large" href="reg.html">Register</a>
 			</div>
 			</div>
 			</div>
