--- a/reg.html
+++ b/reg.html
@@ -40,16 +40,16 @@
 		    <ul class="right hide-on-med-and-down">
 		    	<li><a href="index.html">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="reg.html">Register</a></li>
-		    	<li  class="active"><a href="#">Rules	</a></li>
+		    	<li  class="active"><a href="#">Register</a></li>
+		    	<li ><a href="rules.html">Rules	</a></li>
 		    	<li><a href="team.html">Team</a></li>
 				<li><a href="contact.html">Contact</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
 		    	<li><a href="index.html">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="reg.html">Register</a></li>
-		    	<li class="active"><a href="#">Rules	</a></li>
+		    	<li  class="active"><a href="#">Register</a></li>
+		    	<li ><a href="rules.html">Rules	</a></li>
 		    	<li><a href="team.html">Team</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -299,15 +299,19 @@
 
 		     
 	
-		<footer class="page-footer footer">
+		 <footer class="page-footer footer">
 		    <div class="footer-copyright">
 		      <div class="container">
 		      <div class="row flow-text">
-		      	<div class="left-align" style="display: inline-block;">Like us on
-				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook</a>
+		      	<div class="left-align" style="display: inline-block; font-size:14px;">Like us on
+				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook @Revamp2k17</a>
 				</div>
-		      	 <div style="display: inline-block; float: right;">
-				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a>
+				<div class="center" style="display: inline-block; font-size:14px;">&nbsp 2017
+				<a href="https://facebook.com/krishnacollege" target="_blank">Krishna Engineering College</a>
+				</div>
+		      	
+		      	 <div style="display: inline-block; float: right; font-size:16px;">
+				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a> &amp <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
 		      	 </div>
 		      	</div>
 		      </div>
