--- a/reg.html
+++ b/reg.html
@@ -40,16 +40,16 @@
 		    <ul class="right hide-on-med-and-down">
 		    	<li><a href="index.html">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="reg.html">Register</a></li>
-		    	<li  class="active"><a href="#">Rules	</a></li>
+		    	<li class="active"><a href="#">Register</a></li>
+		    	<li ><a href="rules.html">Rules</a></li>
 		    	<li><a href="team.html">Team</a></li>
 				<li><a href="contact.html">Contact</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
 		    	<li><a href="index.html">Home</a></li>
 		    	<li><a href="events.html">Events</a></li>
-		    	<li><a href="reg.html">Register</a></li>
-		    	<li class="active"><a href="#">Rules	</a></li>
+		    	<li class="active"><a href="#">Register</a></li>
+		    	<li ><a href="rules.html">Rules</a></li>
 		    	<li><a href="team.html">Team</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				</ul>
