--- a/index.html
+++ b/index.html
@@ -98,13 +98,18 @@
 		      	<div class="left-align" style="display: inline-block; font-size:14px;">Like us on
 				<a href="https://facebook.com/revamp2k17" target="_blank">Facebook @Revamp2k17</a>
 				</div>
-				<div class="center" style="display: inline-block; font-size:14px;">&nbsp 2017
+				<div style="display: inline-block; font-size:14px;">&nbsp; 2017
 				<a href="https://facebook.com/krishnacollege" target="_blank">Krishna Engineering College</a>
 				</div>
 		      	
-		      	 <div style="display: inline-block; float: right; font-size:16px;">
-				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a> &amp <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
+		      	 <div style="display: inline-block; float: right; font-size:16px;" class="hide-on-small-only">
+				Made By<a href="http://anujsh.com" target="_blank"> Anuj Sharma</a> &amp; <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
 		      	 </div>
+		      	</div>
+		      	<div class="row hide-on-med-and-up">
+      		      	 <div style="display: inline-block; font-size:16px;">
+      				Made By<a href="http://anujsh.com" target="_blank" class="center-text"> Anuj Sharma</a> &amp; <a href="http://satishpadnani.com/my" target="_blank"> Satish Padnani</a>
+      		      	 </div>
 		      	</div>
 		      </div>
 		    </div>
