tech section error solved

--- a/events.html
+++ b/events.html
@@ -215,7 +215,7 @@
 		   				   </div>
 		   				 </div>
 		   			</div>	
-		   		
+		   		</div>
 
 		   		<div class="row">
 		   			<div class="col m3 s6">
